step 4, add custom grid button

--- a/Etch-a-Sketch/index.html
+++ b/Etch-a-Sketch/index.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
-    <div id="grid-container"></div>
+    <div class="container">
+        <button id="change-grid">Change Grid Size</button>
+        <div id="grid-container"></div>
+    </div>
 </body>
 
 </html>
